--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ a {
         left: 0;
         right: 0;
         z-index: 1000;
-        background: rgba(0, 62, 4, 0.95);
+        background: rgb(21, 21, 21);
         backdrop-filter: blur(10px);
     }
 
@@ -57,7 +57,7 @@ a {
         display: flex;
         align-items: center;
         justify-content: space-between;
-        height: 80px;
+        height: 65px;
     }
 
     .logo {
@@ -66,10 +66,11 @@ a {
         gap: 0.5rem;
     }
 
-    .logo-icon {
-        width: 48px;
-        height: 48px;
-        background: #e2b80e;
+    .logo-icon img {
+        padding-top: 1rem;
+        width: 5.5rem;
+        height: 5.5rem;
+     
         border-radius: 8px;
         display: flex;
         align-items: center;
@@ -317,8 +318,8 @@ a {
 
     .cta-button {
         display: inline-block;
-        background: #facc15;
-        color: #1a1a2e;
+        background:  #11264d;
+        color: #ffffff;
         font-weight: bold;
         font-size: 1.125rem;
         padding: 1.25rem 3rem;
@@ -416,7 +417,7 @@ a {
         /* ===== second SECTION STYLES ===== */
         .solar-section {
             position: relative;
-            background:  #e2b80e;
+            background:  #11264d;
             padding: 6rem 1rem;
             min-height: 100vh;
             display: flex;
@@ -440,7 +441,7 @@ a {
 
         .section-text {
             font-size: 1.25rem;
-            color: #111827;
+            color: #f3f3f3;
             line-height: 1.6;
             margin-bottom: 3rem;
             max-width: 56rem;
@@ -450,8 +451,8 @@ a {
 
         .cta-btn {
             display: inline-block;
-            background: rgba(0, 62, 4, 0.95);
-            color: #ffffff;
+            background: rgb(255, 255, 255);
+            color: #1b3873;
             font-weight: 600;
             font-size: 1.125rem;
             padding: 1rem 3rem;
