--- a/styles.css
+++ b/styles.css
@@ -512,7 +512,7 @@ a {
                         color: #11264d;
                     }
             
-                    .icon {
+                    .icon-2 {
                         width: 20px;
                         height: 20px;
                     }
@@ -637,7 +637,7 @@ a {
 
 
 
-                    
+
 
 
         .solar-section-2 {
